# MediaPlayer

./: .gitignore  .gitmodules  CMakeLists.txt  MediaPlayer.sln  README.md  VideoPlayer.sln  imgui.ini
Application/: Application.vcxproj
Application/src/: main.cpp
Audio/: Audio.h  Audio.vcxproj  Audio.vcxproj.filters
Audio/src/: DataType.h  Player.cpp  Player.h  Types.h
Datatypes/: Datatypes.vcxproj  Datatypes.vcxproj.filters
Datatypes/src/: DataType.h
Media/: Media.vcxproj  Media.vcxproj.filters
Media/src/: Decoder.cpp  Decoder.h  FFmpeg.h  Types.cpp  Types.h
Player/: Player.vcxproj
Player/src/: main.cpp
VideoPlayer/: VideoPlayer.vcxproj  main.cpp
Widgets/: Widgets.h  Widgets.vcxproj  Widgets.vcxproj.filters
Widgets/src/: Application.cpp  Application.h  Types.h  Widget.cpp  Widget.h  Window.cpp  Window.h
Widgets/src/UI/: Button.cpp  Button.h  src.h
assets/shaders/: basic_shader.glsl  yuv_rgb.glsl
include/: CMakeLists.txt
include/Application/: CMakeLists.txt
include/Application/src/: Application.cpp  Application.h
include/Audio/: Audio.h  CMakeLists.txt
include/Audio/src/: DataType.h
include/Datatypes/: CMakeLists.txt  Datatypes.h
include/Datatypes/src/: DataType.h
include/Gui/: CMakeLists.txt  Gui.h
include/Gui/src/: Gui.cpp  Gui.h
include/Media/: CMakeLists.txt
include/Media/src/: Decoder.h
include/Player/: CMakeLists.txt  Player.h
include/Player/src/: Datatype.h  Player.cpp  Player.h
include/Video/: CMakeLists.txt  Video.h
include/Video/src/: Graphics.cpp  Graphics.h  Player_Video.cpp  Player_Video.h
src/Application/: Application.vcxproj  Application.vcxproj.filters  main.cpp
src/Application/src/: Application.cpp  Application.h
src/Audio/: Audio.vcxproj  Audio.vcxproj.filters
src/Audio/src/: DataType.h  Player_Audio.cpp  Player_Audio.h
src/Datatypes/: Datatypes.vcxproj
src/Datatypes/src/: DataType.h
src/Gui/: Gui.cpp  Gui.h  Gui.vcxproj  Gui.vcxproj.filters  cpp.hint
src/Media/: Media.h  Media.vcxproj  Media.vcxproj.filters
src/Media/src/: DataTypes.h  Decoder.cpp  Decoder.h
src/Player/: Player.cpp  Player.h  Player.vcxproj  Player.vcxproj.filters
src/Video/: Video.vcxproj  Video.vcxproj.filters  cpp.hint
src/Video/src/: Datatype.h  Graphics.h  Player_Video.cpp  Player_Video.h  Shaders.h
vendors/: IconsFontAwesome5.h  IconsMaterialDesign.h  ffmpeg.h  glm.h  o_o_glad.h  o_o_glfw.h  o_portaudio.h  portaudio.h  ven_imgui.h
vendors/ffmpeg/include/: ffmpeg.h
vendors/ffmpeg/lib/x64/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil-57.def  avutil.lib  swresample.lib  swscale.lib
vendors/ffmpeg/lib/x64/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
